Fixed weird gradient cut off
-added css styling
-added hidden class to temporarily hide div

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
-html {
+html,
+body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 body {
   background: linear-gradient(to top, #2a4328 0%, #c7beb0 100%);
-  height: 100%;
-  overflow: hidden;
+  background-attachment: fixed;
 }
 
 .container {
@@ -60,6 +63,9 @@ form {
   color: #152819;
   font-size: 17px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.hidden {
+  display: none;
 }
 a {
   color: rgb(39, 38, 38);
